--- a/landing-page/index.html.html
+++ b/landing-page/index.html.html
@@ -37,7 +37,7 @@
             <div class="space-x-6">
                 <a href="#overview" class="text-gray-600 hover:text-[#5F8670] font-medium">Überblick</a>
                 <a href="#tools" class="text-gray-600 hover:text-[#5F8670] font-medium">Werkzeuge</a>
-                <a href="https://www.hermes.admin.ch/de/home.html" target="_blank" class="text-sm bg-gray-100 hover:bg-gray-200 text-gray-700 font-semibold py-2 px-4 rounded-full">Offizielle Seite ↗</a>
+                <a href="https://www.hermes.admin.ch" target="_blank" class="text-sm bg-gray-100 hover:bg-gray-200 text-gray-700 font-semibold py-2 px-4 rounded-full">Offizielle Seite ↗</a>
             </div>
         </nav>
     </header>
@@ -145,4 +145,5 @@
     </footer>
 
 </body>
+
 </html>
