--- a/landing-page/index.html.html
+++ b/landing-page/index.html.html
@@ -131,14 +131,14 @@
                         </p>
                         <ul class="space-y-6">
                             <li class="flex items-center">
-                                <img src="hermes-szenarien.jpg" alt="Icon für Szenarien" class="h-16 w-16 mr-5 flex-shrink-0">
+                                <img src="hermes-Szenarien.jpg" alt="Icon für Szenarien" class="h-16 w-16 mr-5 flex-shrink-0">
                                 <div>
                                     <h4 class="font-bold text-xl mb-1">Szenarien</h4>
                                     <p class="text-gray-600">Bewährte Abläufe für ihre Projekte (z.B. IT-Entwicklung), die als anpassbarer Startpunkt dienen.</p>
                                 </div>
                             </li>
                             <li class="flex items-center">
-                                <img src="hermes-meilensteine.jpg" alt="Icon für Phasen und Meilensteine" class="h-16 w-16 mr-5 flex-shrink-0">
+                                <img src="hermes-Meilensteine.jpg" alt="Icon für Phasen und Meilensteine" class="h-16 w-16 mr-5 flex-shrink-0">
                                 <div>
                                     <h4 class="font-bold text-xl mb-1">Phasen & Meilensteine</h4>
                                     <p class="text-gray-600">Gliedern den Projektverlauf und schaffen klare Entscheidungspunkte.</p>
@@ -195,3 +195,4 @@
 
 </body>
 </html>
+
