--- a/navigator/index.html
+++ b/navigator/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HERMES 2022 Navigator</title>
+
+    <base href="/navigator/">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -1094,3 +1096,4 @@
     </script>
 </body>
 </html>
+
